myteo/test/parser/ast/record/non_scoped_id_before_brace2.myte
module test

fun main() {
    Foo.Bar().Baz { field = 1 };
}